# rrcrossing

./: .gitignore  README.md  main.cpp  statemachine.cpp  statemachine.h  ws2812.cpp  ws2812.h
eda/monitor/: Xing Signals XIAO.kicad_pcb  Xing Signals XIAO.kicad_prl  Xing Signals XIAO.kicad_pro  Xing Signals XIAO.kicad_sch  Xing Signals XIAO.xml
eda/sensor/: tracksensor.kicad_pcb  tracksensor.kicad_prl  tracksensor.kicad_pro  tracksensor.kicad_sch
pcb/: Xing Signals XIAO.kicad_pcb  Xing Signals XIAO.kicad_sch
src/: CMakeLists.txt  main.cpp  statemachine.cpp  statemachine.h  ws2812.pio
